# owl

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README_zh.md  build_docker.sh  check_docker.bat  docker-compose.yml  pyproject.toml  requirements.txt  run_app.py  run_app_en.py  run_app_zh.py
.container/: .dockerignore  DOCKER_README.md  DOCKER_README_en.md  Dockerfile  build_docker.bat  build_docker.sh  check_docker.bat  check_docker.sh  docker-compose.yml  run_in_docker.bat  run_in_docker.sh
community_usecase/: COMMUNITY_CALL_FOR_USE_CASES.md
deep-swarm/: .env_template
deep-swarm/camel/agents/: chat_agent.py
deep-swarm/camel/messages/: __init__.py  func_message.py
deep-swarm/camel/models/: __init__.py  deepseek_model.py  openai_model.py
deep-swarm/camel/retrievers/: graph_auto_retriever.py  vector_retriever.py
deep-swarm/camel/runtime/: api.py
deep-swarm/camel/tasks/: task.py
deep-swarm/camel/toolkits/: __init__.py  arxiv_toolkit.py  audio_analysis_toolkit.py  document_processing_toolkit.py  image_analysis_toolkit.py  (+2 more)
deep-swarm/utils/: gaia.py
licenses/: update_license.py
owl/: .env_template  app.py  app_en.py  gradio app.py  run.py  run_deepseek.py  run_deepseek_example.py  run_deepseek_zh.py  run_gaia_roleplaying.py  run_mini.py  run_ollama.py  run_openai_compatiable_model.py  run_qwen.py  run_qwen_mini_zh.py  run_qwen_zh.py  run_qwq_demo.py  run_terminal.py  run_terminal_zh.py  run_write_files.py  script_adapter.py  temp_run.py
owl/utils/: __init__.py  common.py  document_toolkit.py  enhanced_role_playing.py  gaia.py
(+28 files in other folders)
